--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@ttskch/select2-bootstrap5-theme@1.1.2/dist/select2-bootstrap-5-theme.min.css"
+      rel="stylesheet"
+    />
+
+    <style>
+      .select2-container--bootstrap5 .select2-selection--single.is-invalid,
+      .was-validated
+        .select2-container--bootstrap5
+        .select2-selection--single.is-invalid {
+        border-color: #dc3545;
+        box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+      }
+
+      .select2-container--bootstrap5 .select2-selection--single.is-valid {
+        border-color: #198754;
+        box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.25);
+      }
+    </style>
   </head>
   <body class="bg-light">
     <div class="container py-5">
@@ -39,31 +63,41 @@
       </div>
     </div>
 
-    <!-- Bootstrap JS (Popper + JS) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      (function () {
-        "use strict";
-        const form = document.getElementById("myForm");
-        const successMsg = document.getElementById("successMessage");
+    <form class="needs-validation" novalidate>
+      <select class="select2 form-select" required>
+        <option></option>
+        <option value="1">Seçenek 1</option>
+        <option value="2">Seçenek 2</option>
+      </select>
+      <button type="submit">Gönder</button>
+    </form>
 
-        form.addEventListener(
-          "submit",
-          function (event) {
-            // Validasyon kontrolü
-            if (!form.checkValidity()) {
-              event.preventDefault();
-              event.stopPropagation();
-            } else {
-              event.preventDefault(); // örnek için sayfa yenilemesin
-              successMsg.classList.remove("d-none");
-            }
-            // Border biçimlendirmesi tetikleniyor
-            form.classList.add("was-validated");
-          },
-          false,
-        );
-      })();
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(".select2").select2({
+          theme: "bootstrap-5",
+          placeholder: "Bir şey seçin",
+        });
+
+        $("form").on("submit", function (e) {
+          const f = this;
+          if (!f.checkValidity()) e.preventDefault();
+          $(f).addClass("was-validated");
+          $(f)
+            .find("select.select2[required]")
+            .each(function () {
+              const $o = $(this),
+                sel = $o.val(),
+                container = $o.next().find(".select2-selection--single");
+              if (!sel)
+                container.addClass("is-invalid").removeClass("is-valid");
+              else container.addClass("is-valid").removeClass("is-invalid");
+            });
+        });
+      });
     </script>
   </body>
 </html>
