--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
 
         $("form").on("submit", function (e) {
           const f = this;
-          if (!f.checkValidity()) e.preventDefault();
+          if (!f.checkValidity()) {
+            e.preventDefault();
+            e.stopPropagation();
+          }
           $(f).addClass("was-validated");
           $(f)
             .find("select.select2[required]")
