--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body class="bg-light">
     <div class="container py-5">
-      <h1 class="mb-4">Form Validasyon Demo</h1>
+      <h1 class="mb-4">Bootstrap Validasyon Örneği</h1>
       <form id="myForm" class="needs-validation" novalidate>
         <div class="mb-3">
           <label for="name" class="form-label">
